@@ -1,5 +1,4 @@
 name             = Dist-Zilla-PluginBundle-Author-CHIM
-version          = 0.050002
 author           = Anton Gerasimov <chim@cpan.org>
 license          = Perl_5
 copyright_holder = Anton Gerasimov
@@ -29,6 +28,7 @@ Dist::Zilla::Plugin::Test::Version          = 0.002004
 Dist::Zilla::Plugin::Test::EOL              = 0.08
 Dist::Zilla::Plugin::Test::NoTabs           = 0.04
 Dist::Zilla::Plugin::TravisCI::StatusBadge  = 0.004
+Dist::Zilla::Plugin::Git                    = 2.023
 Moose                                       = 2.0
 Test::CPAN::Meta                            = 0
 Pod::Coverage::TrustPod                     = 0
