@@ -2,6 +2,9 @@ Revision history for Perl extension Dist::Zilla::PluginBundle::Author::CHIM
 
 {{$NEXT}}
 
+    [ FEATURES ]
+    - added plugins Git::NextVersion, Git::Tag, Git::Commit
+
 0.050002 Mon Jul 14 16:17:36 2014 +0000
 
     [ FEATURES ]
